--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="index.css">
   
-  <title>Frontend Mentor | Social proof section</title>
+  <title>Social proof section</title>
 
 </head>
 
